# winter_2024-2025

.github/workflow/: string_make.yml
.github/workflows/: string_make.yml
162.string/: CMakeLists.txt  README.md
162.string/include/: my_string.h
162.string/include/interface/: interface.h
162.string/include/my_string/: my_string.h
162.string/lib/libstdc++/: include.cpp
162.string/src/: main.cpp
162.string/src/interface/: interface.cpp
162.string/src/my_string/: my_string.cpp
162.string/tests/: tests.cpp
to_do_list/: README.md
